# NeurIPS-Open-Polymer-Prediction-2025

./: README.md  exploracion.ipynb  pyproject.toml  test.py
.ipynb_checkpoints/: exploracion-checkpoint.ipynb
